--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <!-- title page -->
-    <title>Somia- Multipurpose Template</title>
+    <title>Nitrix - Multipurpose Template</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/core-img/favicon.ico" />
 
   </head>
-  <body">
+  <body>
     <noscript>
       <strong
         >We're sorry but sameh doesn't work properly without JavaScript enabled.
